feat: complete NeoForge priority 24 shared-memory control
- Add bounded vm2 variables, iterators, collision, messaging, watchers, and branches
- Add runtime contract, verifier, clean-world reset, and Hermes video workflow
- Update manuals, roadmap, tests, and verification counts